--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <title>Thiago MS</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/components/title.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&family=Open+Sans:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Open+Sans:wght@300&family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -26,12 +28,12 @@
       </nav>
     </header>
 
-    <!-- <h1>Thiago MS</h1>
+    <h1>Thiago MS</h1>
     <h2>FrontEnd Developer</h2>
 
     <section id="skills"></section>
     <section id="proj"></section>
     <section id="sobre"></section>
-    <section id="contatos"></section> -->
+    <section id="contatos"></section>
   </body>
 </html>
