--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" type="text/css" href="css/components/title.css" />
     <link rel="stylesheet" type="text/css" href="css/components/subtitle.css" />
+    <link rel="stylesheet" type="text/css" href="css/components/box.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,8 +30,10 @@
       </nav>
     </header>
 
-    <h1>Thiago MS</h1>
-    <h2>FrontEnd Developer</h2>
+    <div id="box">
+      <h1>Thiago MS</h1>
+      <h2>FrontEnd Developer</h2>
+    </div>
 
     <section id="skills"></section>
     <section id="proj"></section>
