--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/components/button.css" />
     <link rel="stylesheet" type="text/css" href="css/components/action.css" />
     <link rel="stylesheet" type="text/css" href="css/components/header.css" />
+    <link rel="stylesheet" type="text/css" href="css/components/banner.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -32,14 +33,18 @@
         <a class="button" href="#download">Download CV</a>
       </nav>
     </header>
-
-    <div class="box">
-      <h1 class="title">Thiago MS</h1>
-      <h2 class="subtitle">FrontEnd Developer</h2>
-    </div>
-
-    <a class="button" href="#download">Download CV</a>
-    <a class="button" href="#download">Contatos</a>
+    <section class="banner">
+      <div class="wrapper">
+        <div class="box">
+          <h1 class="title">Thiago MS</h1>
+          <h2 class="subtitle">FrontEnd Developer</h2>
+        </div>
+        <div class="navigation">
+          <a class="button" href="#download">Download CV</a>
+          <a class="button" href="#download">Contatos</a>  
+        </div>
+      </div>
+    </section>
 
     <section id="skills"></section>
     <section id="proj"></section>
