--- a/index.html
+++ b/index.html
@@ -5,13 +5,28 @@
     <title>Thiago MS</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <link rel="stylesheet" type="text/css" href="css/components/title.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="css/components/title-main.css"
+    />
     <link rel="stylesheet" type="text/css" href="css/components/subtitle.css" />
     <link rel="stylesheet" type="text/css" href="css/components/box.css" />
     <link rel="stylesheet" type="text/css" href="css/components/button.css" />
     <link rel="stylesheet" type="text/css" href="css/components/action.css" />
     <link rel="stylesheet" type="text/css" href="css/components/header.css" />
     <link rel="stylesheet" type="text/css" href="css/components/banner.css" />
+    <link rel="stylesheet" type="text/css" href="css/components/section.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="css/components/progress-bar.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="css/components/skill-tec.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -36,17 +51,28 @@
     <section class="banner">
       <div class="wrapper">
         <div class="box">
-          <h1 class="title">Thiago MS</h1>
-          <h2 class="subtitle">FrontEnd Developer</h2>
+          <h2 class="main-title">Thiago MS</h2>
+          <h3 class="subtitle">FrontEnd Developer</h3>
         </div>
         <div class="navigation">
           <a class="button" href="#download">Download CV</a>
-          <a class="button" href="#download">Contatos</a>  
+          <a class="button" href="#download">Contatos</a>
         </div>
       </div>
     </section>
 
-    <section id="skills"></section>
+    <section id="skills" class="section">
+      <h2 class="main-title -second">Skills</h2>
+      <div class="container">
+        <article class="skill-tec">
+          <img class="icon" src="assets/ico_html5.png" />
+          <div class="right">
+            <h3 class="title">HTML</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
+      </div>
+    </section>
     <section id="proj"></section>
     <section id="sobre"></section>
     <section id="contatos"></section>
