--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     <link
       rel="stylesheet"
       type="text/css"
+      href="css/components/card-project.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="css/components/wrapper-skill.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
       href="css/components/progress-bar.css"
     />
     <link
@@ -63,7 +73,7 @@
 
     <section id="skills" class="section">
       <h2 class="main-title -second">Skills</h2>
-      <div class="container">
+      <div class="wrapper-skill">
         <article class="skill-tec">
           <img class="icon" src="assets/ico_html5.png" />
           <div class="right">
@@ -71,9 +81,77 @@
             <progress class="progress-bar" max="100" value="70">70%</progress>
           </div>
         </article>
+        <article class="skill-tec">
+          <img class="icon" src="assets/ico_nodejs.png" />
+          <div class="right">
+            <h3 class="title">NodeJS</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
+        <article class="skill-tec">
+          <img class="icon" src="assets/ico_css3.png" />
+          <div class="right">
+            <h3 class="title">CSS</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
+        <article class="skill-tec">
+          <img class="icon" src="assets/ico_tdd.png" />
+          <div class="right">
+            <h3 class="title">TDD</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
+        <article class="skill-tec">
+          <img class="icon" src="assets/ico_js.png" />
+          <div class="right">
+            <h3 class="title">JavaScript</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
+        <article class="skill-tec">
+          <img class="icon" src="assets/ico_restapi.png" />
+          <div class="right">
+            <h3 class="title">Rest API</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
+        <article class="skill-tec">
+          <img class="icon" src="assets/ico_react.png" />
+          <div class="right">
+            <h3 class="title">React</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
+        <article class="skill-tec">
+          <img class="icon" src="assets/ico_ux.png" />
+          <div class="right">
+            <h3 class="title">UX</h3>
+            <progress class="progress-bar" max="100" value="70">70%</progress>
+          </div>
+        </article>
       </div>
     </section>
-    <section id="proj"></section>
+    <section id="proj" class="section -bgBlack -bdFirst">
+      <h2 class="main-title -second">Projetos</h2>
+      <figure class="card-project">
+        <img
+          class="logo"
+          src="assets/logo-firedlabs.png"
+          alt="Logo da FiredLabs"
+        />
+      </figure>
+      <figure class="card-project -blue">
+        <img
+          class="logo"
+          src="assets/logo-collabcode.png"
+          alt="Logo da Collabcode"
+        />
+      </figure>
+      <figure class="card-project">
+        <img class="logo" src="assets/portfolio.png" alt="Logo da Cara" />
+      </figure>
+    </section>
     <section id="sobre"></section>
     <section id="contatos"></section>
   </body>
